retrieveUnpackaged/objects/Risk_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <formula>Text(Data_Element_Category_Id__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Element_Category_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Element Category Id</label>
        <referenceTo>Risk_Data_Element__c</referenceTo>
        <relationshipLabel>Risk Indicators</relationshipLabel>
        <relationshipName>Risk_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Element_Description__c</fullName>
        <label>Data Element Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profile__c</fullName>
        <label>Risk Profile</label>
        <referenceTo>Risk_Profile__c</referenceTo>
        <relationshipLabel>Risk Indicators</relationshipLabel>
        <relationshipName>Risk_Indicators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>Score__c  * Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Risk Indicator</label>
    <nameField>
        <displayFormat>RI-{000000}</displayFormat>
        <label>Risk Indicator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Indicators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>